--- a/vyapara1app/templates/company/edit_creditnot.html
+++ b/vyapara1app/templates/company/edit_creditnot.html
@@ -396,7 +396,7 @@
 
                                                     <td style="width:21%" >
                                                         <div class="d-flex">
-                                                            <select name='product[]' id="product{{ forloop.counter }}" class="form-control product border-secondary select2" onchange="changeprd(this.id)" style="color: black; background-color: white;">
+                                                            <select name='product[]' id="product1" class="form-control product border-secondary select2" onchange="changeprd(this.id)" style="color: black; background-color: white;">
                                                                 <option value="{{ j.product.id }}" selected hidden>{{ j.product.item_name }}</option>
                                                                 <option value=""  hidden>Select Product</option>
                                                                 {% for i in product %}
@@ -405,6 +405,17 @@
                                                                     {% endif %}
                                                                 {% endfor %}
                                                             </select>&nbsp;&nbsp;&nbsp;
+
+                                                            <script>
+                                                                $(document).ready(function() {
+                                                                    
+                                                                    $('#product1').select2();
+                                                                
+                                                                  });
+                
+                
+                                                            </script>
+                                                          
                                                             <button id="modal_closing" type="button" class="btn btn-outline-info " data-bs-toggle="modal" data-bs-target="#newitem" data-bs-whatever="@mdo">
                                                                 <span class="fa fa-plus"></span>
                                                             </button>
@@ -412,15 +423,15 @@
                                                     </td>
 
                                                     <td style="width:12%">
-                                                        <input type="text" name='hsn[]'  value="{{ j.product.item_hsn }}" id="hsn{{ forloop.counter }}" class="form-control border-secondary" style="color: black; background-color: white;"/>
+                                                        <input type="text" name='hsn[]'  value="{{ j.product.item_hsn }}" id="hsn1" class="form-control border-secondary" style="color: black; background-color: white;"/>
                                                     </td>
 
                                                     <td style="width: 13%;">
-                                                        <input type="number" name='qty[]' value="{{ j.qty }}"  placeholder='Enter Qty' id="qty{{ forloop.counter }}" value=0 class="form-control qty mb-1 border-secondary" step=0 min=0 style="color: black; background-color: white;" />
+                                                        <input type="number" name='qty[]' value="{{ j.qty }}"  placeholder='Enter Qty' id="qty1" value=0 class="form-control qty mb-1 border-secondary" step=0 min=0 style="color: black; background-color: white;" />
                                                     </td>
 
                                                     <td style="width:12%">
-                                                        <input type="number" name='price[]' value="{{ j.product.item_purchase_price }}" id="unit{{ forloop.counter }}"class="form-control border-secondary price" step="0.00" min="0" style="color: black; background-color: white;" />
+                                                        <input type="number" name='price[]' value="{{ j.product.item_purchase_price }}" id="unit1"class="form-control border-secondary price" step="0.00" min="0" style="color: black; background-color: white;" />
                                                     </td>
 
                                                     <td style="width: 15%;">
@@ -438,7 +449,7 @@
                                                                 <option value="GST13[18%]">GST18[18%]</option>
                                                                 <option value="GST28[28%]">GST28[28%]</option>
                                                             </select>
-                                                            <select name='tax2[]' id="tax21" class="form-control tax inter_tax d-none border-secondary" style="color: black; background-color: white;">
+                                                            <select name='tax2[]' id="tax11" class="form-control tax inter_tax d-none border-secondary" style="color: black; background-color: white;">
                                                                 <option  value=" " hidden>Select Tax</option>
                                                                 <option value="IGST0[0%]"  >IGST0[0%]</option>
                                                                 <option value="IGST3[3%]">IGST3[3%]</option>
@@ -448,7 +459,7 @@
                                                                 <option value="IGST28[28%]">IGST28[28%]</option>
                                                             </select>
                                                         {% else %}
-                                                            <select name='tax1[]' id="tax1{{ forloop.counter }}" class="form-control tax intra_tax d-none border-secondary" style="color: black; background-color: white;">
+                                                            <select name='tax2[]' id="tax21" class="form-control tax intra_tax d-none border-secondary" style="color: black; background-color: white;">
                                                                 <option  value=" " hidden>Select Tax</option>
                                                                 <option value="GST0[0%]" >GST0[0%]</option>
                                                                 <option value="GST3[3%]">GST3[3%]</option>
@@ -457,7 +468,7 @@
                                                                 <option value="GST13[18%]">GST18[18%]</option>
                                                                 <option value="GST28[28%]">GST28[28%]</option>
                                                             </select>
-                                                            <select name='tax2[]' id="tax2{{ forloop.counter }}" class="form-control tax inter_tax d-flex border-secondary" style="color: black; background-color: white;">
+                                                            <select name='tax2[]' id="tax21" class="form-control tax inter_tax d-flex border-secondary" style="color: black; background-color: white;">
                                                                 <option value="{{j.tax}}" selected >{{j.tax}}</option>
                                                                 <option  value=" " hidden>Select Tax</option>
                                                                 <option value="IGST0[0%]" >IGST0[0%]</option>
@@ -470,15 +481,15 @@
                                                         {% endif %}
                                                     </td>
                                                     <td style="width:10%">
-                                                        <input type="number" name='discount[]' placeholder='Enter Discount' id="disc{{forloop.counter}}" value="{{j.discount|default:0}}" class="form-control disc border-secondary" step=0 min=0 style="color: black; background-color: white;">
+                                                        <input type="number" name='discount[]' placeholder='Enter Discount' id="disc1" value="{{j.discount|default:0}}" class="form-control disc border-secondary" step=0 min=0 style="color: black; background-color: white;">
                                                     </td>
 
                                                     <td style="width:13%">
-                                                        <input type="number" name='total[]' value="{{ j.total }}" id="total{{ forloop.counter }}" placeholder=0 class="form-control total border-secondary" value=0 step="any" readonly style="color: black; background-color: white;" />
+                                                        <input type="number" name='total[]' value="{{ j.total }}" id="total1" placeholder=0 class="form-control total border-secondary" value=0 step="any" readonly style="color: black; background-color: white;" />
                                                     </td>
 
                                                     <td style="display: none;">
-                                                        <input type="number" step="any" name='taxamount1' id="taxamount{{ forloop.counter }}" class="form-control taxamount" />
+                                                        <input type="number" step="any" name='taxamount1' id="taxamount1" class="form-control taxamount" />
                                                     </td>
 
                                                     <td style="width:5%">
@@ -1264,8 +1275,10 @@ function changeprd(id,value){
             data3 = response.price
             data4 = response.gst
             data5 = response.igst
+            console.log(data5)
             var bc = document.getElementById("plosu").value;
             if (bc == 'State') {
+                console.log(data4)
                 document.getElementById('intrataxval'+n).value = data4;
                 document.getElementById('intertaxval'+n).value = data5;
                 document.getElementById('hsn'+n).value = data;
@@ -1273,6 +1286,8 @@ function changeprd(id,value){
                 document.getElementById('tax1'+n).value = data4;
                 calc()
             } else if (bc == 'Other State') {
+                console.log(data5)
+                console.log(n)
                 document.getElementById('intrataxval'+n).value = data4;
                 document.getElementById('intertaxval'+n).value = data5;
                 document.getElementById('hsn'+n).value = data;
@@ -1291,14 +1306,28 @@ function changeprd(id,value){
 
 }
 
-$(document).on('click','.remove_row',function(){
+$(document).on('click', '.remove_row', function () {
     var row_id = $(this).attr("id");
-    $('#addr0'+row_id+'').remove();
+    console.log("remove : " + row_id);
+    $('#addr0' + row_id + '').remove();
+
+
     var table = document.getElementById('tab_logic');
     var rows = table.getElementsByTagName('tbody')[0].getElementsByTagName('tr');
     for (var i = 0; i < rows.length; i++) {
         var cells = rows[i].getElementsByTagName('td');
         cells[0].innerText = i + 1;
+        // Update the id attribute of each row
+        var oldId = rows[i].id;
+        var newId = 'addr0' + (i + 1);
+        rows[i].id = newId;
+
+        // Update the id attribute of any element within the row that has an id
+        $(rows[i]).find('[id]').each(function () {
+            var elementId = $(this).attr('id');
+            var newElementId = elementId.replace(/\d+/, i + 1);
+            $(this).attr('id', newElementId);
+        });
     }
     calc();
 });
